<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_270sdp"
        android:layout_height="match_parent"
        android:background="@drawable/btnbg"
        android:backgroundTint="@color/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/titletxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkbg"
                android:hint="@string/this_is_title"
                android:inputType="text"
                android:maxLength="80"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/typetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkbg"
                android:hint="@string/type"
                android:inputType="text"
                android:maxLength="50"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/yeartxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkbg"
                android:hint="@string/year"
                android:inputType="number"
                android:maxLength="50"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/imagetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/darkbg"
                android:hint="@string/image"
                android:inputType="textWebEditText"
                android:maxLength="500"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelbtn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnbg"
                android:backgroundTint="@color/tarns"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/red"
                app:layout_constraintEnd_toStartOf="@+id/center" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/savebtn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnbg"
                android:backgroundTint="@android:color/holo_blue_light"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/center" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>