<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ui.fargs.details.DetailsFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_250sdp"
        android:background="@color/darkbg"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titletxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/tarns"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/this_is_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/typetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@drawable/btnbg"
        android:backgroundTint="@android:color/holo_blue_light"
        android:padding="@dimen/_10sdp"
        android:text="@string/this_is_type"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titletxt" />

    <TextView
        android:id="@+id/yeartxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:background="@drawable/btnbg"
        android:backgroundTint="@android:color/holo_blue_light"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/this_is_year"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titletxt" />


</androidx.constraintlayout.widget.ConstraintLayout>