<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/itemView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/btnbg"
        android:backgroundTint="@color/darkbg"
        android:foreground="?selectableItemBackground"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_180sdp"
            android:layout_weight="1"
            android:contentDescription="@string/later"
            android:scaleType="fitCenter"
            android:src="@android:color/darker_gray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titletxt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/this_is_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updatebtn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbg"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_edit"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/deletebtn"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deletebtn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbg"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_edit"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>